Support JEI using only the API (#61)