@@ -297,7 +297,7 @@ public class FluidSlot extends BindableUIElement<FluidStack> {
     public FluidSlot xeiRecipeSlot(IngredientIO io, float chance) {
         // todo xei
         if (LDLib2.isJeiLoaded()) {
-            JEISupport.recipeSlot(this);
+            JEISupport.recipeSlot(this, io);
         }
 //        if (LDLib2.isReiLoaded()) {
 //            REISupport.recipeSlot(this, io);
@@ -311,7 +311,7 @@ public class FluidSlot extends BindableUIElement<FluidStack> {
     public FluidSlot xeiRecipeSlot(IngredientIO io, float chance, int amount, Supplier<Stream<FluidStack>> allPossibleFluids) {
         // todo xei
         if (LDLib2.isJeiLoaded()) {
-            JEISupport.recipeSlot(this, allPossibleFluids);
+            JEISupport.recipeSlot(this, io, allPossibleFluids);
         }
 //        if (LDLib2.isReiLoaded()) {
 //            REISupport.recipeSlot(this, io, () -> allPossibleFluids);
@@ -602,22 +602,18 @@ public class FluidSlot extends BindableUIElement<FluidStack> {
         public static void recipeIngredient(FluidSlot fluidSlot, IngredientIO io, Supplier<Stream<FluidStack>> allPossibleFluids) {
             LDLibJEIPlugin.recipeIngredient(fluidSlot, io, () -> allPossibleFluids.get()
                     .map(fluidStack -> LDLibJEIPlugin.createTypedIngredient(NeoForgeTypes.FLUID_STACK, fluidStack))
-                    .filter(Optional::isPresent)
-                    .map(Optional::get)
-                    .collect(Collectors.toList()));
+                    .flatMap(Optional::stream)
+                    .toList());
         }
 
-        public static void recipeSlot(FluidSlot fluidSlot) {
-            recipeSlot(fluidSlot, () -> Stream.of(fluidSlot.getFluid()));
+        public static void recipeSlot(FluidSlot fluidSlot, IngredientIO io) {
+            recipeSlot(fluidSlot, io, () -> Stream.of(fluidSlot.getFluid()));
         }
 
-        public static void recipeSlot(FluidSlot fluidSlot, Supplier<Stream<FluidStack>> allPossibleFluids) {
-            LDLibJEIPlugin.recipeSlot(fluidSlot, () -> {
-                var fluid = fluidSlot.getValue();
-                return fluid.isEmpty() ? null : LDLibJEIPlugin
-                        .createTypedIngredient(NeoForgeTypes.FLUID_STACK, fluidSlot.getFluid())
-                        .orElse(null);
-            }, () -> allPossibleFluids.get().map(fluid -> LDLibJEIPlugin.createTypedIngredient(NeoForgeTypes.FLUID_STACK, fluid).orElseThrow()).collect(Collectors.toList()));
+        public static void recipeSlot(FluidSlot fluidSlot, IngredientIO io, Supplier<Stream<FluidStack>> allPossibleFluids) {
+            fluidSlot.registerValueListener(LDLibJEIPlugin.recipeSlot(
+                    fluidSlot, io, NeoForgeTypes.FLUID_STACK, allPossibleFluids,
+                    fluid -> fluidSlot.setFluid(fluid, false)));
         }
     }
 
